[gd_scene load_steps=7 format=2]

[ext_resource path="res://MovingPieces/Map.gd" type="Script" id=1]
[ext_resource path="res://MovingPieces/BiomeGrid.tscn" type="PackedScene" id=2]
[ext_resource path="res://MovingPieces/BiomeGrids/GrassForegroundTileset.tres" type="TileSet" id=3]
[ext_resource path="res://MovingPieces/BiomeGrids/DirtBackgroundTileset.tres" type="TileSet" id=4]
[ext_resource path="res://MovingPieces/BiomeGrids/TempleForegroundTileset.tres" type="TileSet" id=5]
[ext_resource path="res://MovingPieces/BiomeGrids/TempleBackgroundTileset.tres" type="TileSet" id=6]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="Forest" parent="." instance=ExtResource( 2 )]

[node name="Background1" parent="Forest" index="0"]
tile_set = ExtResource( 4 )

[node name="Foreground1" parent="Forest" index="2"]
tile_set = ExtResource( 3 )

[node name="Foreground2" parent="Forest" index="3"]
tile_set = null

[node name="Cave" parent="." instance=ExtResource( 2 )]

[node name="Tree" parent="." instance=ExtResource( 2 )]

[node name="Temple" parent="." instance=ExtResource( 2 )]

[node name="Background1" parent="Temple" index="0"]
tile_set = ExtResource( 6 )

[node name="Foreground1" parent="Temple" index="2"]
tile_set = ExtResource( 5 )

[node name="Foreground2" parent="Temple" index="3"]
tile_set = null

[node name="Items" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Traps" type="Node2D" parent="."]

[editable path="Forest"]

[editable path="Temple"]
